Improve: トップページを改善

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,2 +1,5 @@
-<h1>Expressive Writing</h1>
-<p>output_your_feelings作成中です</p>
+<div class="top-wrapper">
+  <div class="top-inner-text">
+    <h1>Expressive Writing</h1>
+  </div>
+</div>
