--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,7 +5,7 @@
       <%= form_with model: @user, local: true do |f| %>
         <div class="form-group">
           <%= f.label :name %>
-          <%= f.text_field :last_name, class: 'form-control' %>
+          <%= f.text_field :name, class: 'form-control' %>
         </div>
         <div class="form-group">
           <%= f.label :email %>
