--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,7 +9,7 @@
           <%= link_to "MyPage", "#" %>
         </li>
         <li class="nav-item nav-link">
-          <%= link_to 'ログアウト', logout_path, method: :delete %>
+          <%= link_to (t 'defaults.logout'), logout_path, class: 'nav-link', method: :delete %>
         </li>
       </ul>
     </div>
