--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse show" id="navbarDark">
       <ul class="navbar-nav ms-auto mb-2  mb-xl-0">
         <li class="nav-item nav-link">
-          <%= link_to "ログイン", login_path %>
+          <%= link_to (t 'defaults.login'), login_path ,class: 'nav-link' %>
         </li>
         <li class="nav-item nav-link">
-          <%= link_to "ユーザー登録", new_user_path %>
+          <%= link_to (t 'defaults.register'), new_user_path ,class: 'nav-link' %>
         </li>
       </ul>
     </div>
