Add: articleモデルを作成

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse show" id="navbarDark">
       <ul class="navbar-nav ms-auto mb-2  mb-xl-0">
         <li class="nav-item nav-link">
-          <%= link_to "MyPage", "#" %>
+          <%= link_to "MyPage", "#", class: 'nav-link' %>
         </li>
         <li class="nav-item nav-link">
           <%= link_to (t 'defaults.logout'), logout_path, class: 'nav-link', method: :delete %>
