--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row">
     <div class="col-12">
       <div class="row">
-        <% if @boards.present? %>
-          <%= render @boards %>
+        <% if @articles.present? %>
+          <%= render @articles %>
         <% else %>
           <p><%= t('.no_result') %></p>
         <% end %>
