--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,9 @@
             <li class="dropdown-item">
               <%= link_to "筆記開示一覧", articles_path, class: 'dropdown-item' %>
             </li>
-            <li><a class="dropdown-item" href="#">筆記開示作成</a></li>
+            <li class="dropdown-item">
+              <%= link_to "筆記開示作成", new_article_path, class: 'dropdown-item' %>
+            </li>
           </ul>
         </li>
         <li class="nav-item nav-link">
