--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -3,9 +3,7 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">
-          <a href="#">
-            <%= article.title %>
-          </a>
+          <%= link_to article.title, article_path(article) %>
         </h4>
         <p class="card-text"><%= article.body %></p>
       </div>
