Add: answerモデル作成

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,6 +19,9 @@
             <li class="dropdown-item">
               <%= link_to "筆記開示作成", new_article_path, class: 'dropdown-item' %>
             </li>
+            <li class="dropdown-item">
+              <%= link_to "お試し", new_answer_path, class: 'dropdown-item' %>
+            </li>
           </ul>
         </li>
         <li class="nav-item nav-link">
