--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,8 +1,9 @@
-<%= form_with model: answer, local: true do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-  <div class="form-group">
-    <label for="question1">Q1. 今日1日の流れを記入してください</label>
-    <%= f.text_area :body, class: 'form-control', rows: 10 %>
+<div class="row mb-3">
+  <div class="col-lg-8 offset-lg-2">
+    <%= form_with model: @answer, url: [@question, @answer], local: true do |f| %>
+      <%= render 'shared/error_messages', object: f.object %>
+      <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-answer-body', row: 4, placeholder: Answer.human_attribute_name(:body) %>
+      <%= f.submit t('defaults.answer'), class: 'btn btn-primary' %>
+    <% end %>
   </div>
-  <%= f.submit class: 'btn btn-primary' %>
-<% end %>
+</div>
