--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,7 +10,7 @@
             <p class="card-text"><%= question.content %></p>
           </div>
           <div class="card-footer">
-            <%= link_to '筆記開示してみる', new_answer_path(question) %>
+            <%= link_to '筆記開示してみる', new_question_answer_path(question) %>
           </div>
         </div>
       </div>
