--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,5 +1,53 @@
-<div class="top-wrapper">
-  <div class="top-inner-text">
-    <h1>Expressive Writing</h1>
+<section class = "top">
+  <div class="top-wrapper">
+    <div class="top-inner-text">
+      <h1>MyEmotion</h1>
+    </div>
   </div>
-</div>
+</section>
+<section class = "expressivewriting">
+  <div class="container text-center">
+    <div class="explanation">
+      <h2 class = "title">About Expressive writing</h2>
+      <h6 class = "title-jp">筆記開示とは</h6>
+        <p class = "text">エクスプレッシブライティングとは、1980年代にアメリカの社会心理学者ジェームス・ペネベーカー博士によって生み出された方法です<br>
+                          日本では「筆記開示」とも呼ばれており、思考や感情を書いて言語化するというテクニックのことです</p>
+    </div>
+    <div class="way">
+      <h2 class = "title">How to Expressive writing</h2>
+      <h6 class = "title-jp">方法</h6>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="card card-body text-center" style="width: 18rem;">
+          <h5 class="card-title">Step 1</h5>
+          <p class="card-text;">紙とペンを用意します</p>
+        </div>
+        <div class="card card-body text-center" style="width: 18rem;">
+          <h5 class="card-title">Step 2</h5>
+          <p class="card-text">20分間、思考や感情を書き出してください</p>
+        </div>
+        <div class="card card-body text-center" style="width: 18rem;">
+          <h5 class="card-title">Step 3</h5>
+          <p class="card-text">毎日行います<br>
+                               ※少なくとも4日間の継続を推奨されています</p>
+        </div>
+      </div>
+    </div>
+    <div class="MyEmotion">
+      <h2 class = "title">How to MyEmotion</h2>
+      <h6 class = "title-jp">MyEmotionの使い方</h6>
+        <p class = "description">MyEmotionとは、通常紙やペンを用いて行う筆記開示をWeb上で行うサービスです</p>
+      <div class="paragraph">
+        <h5 class = "subtitle">お試し</h3>
+          <p class = "text">質問に対して筆記開示していただく機能です<br>
+                            Q1から順番にご回答していただくことを推奨しております<br>
+                            まずはお試しとして、お気軽にご利用ください</p>
+        <h5 class = "subtitle">筆記開示作成</h3>
+          <p class = "text">筆記開示をおこなう機能です<br>
+                            文脈や文字数などは気にせず、ご自身の思うままにご記入ください</p>
+        <h5 class = "subtitle">筆記開示一覧</h3>
+          <p class = "text">作成した筆記開示を一覧として確認することができます<br>
+                            作成者の方のみに表示されますので、安心してご利用ください</p>
+      </div>
+    </div>
+  </div>
+</section>
