--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-xl navbar-dark bg-dark p-1 sticky-top py-0">
+<nav class="navbar navbar-expand-xl navbar-ligh bg-ligh p-1 sticky-top py-0">
   <div class="container">
     <%= link_to root_path, class: 'navbar-brand' do %>
-      <h1>OutpotYourFeeling</h1>
+      <h1 class="title">MyEmotion</h1>
     <% end %>
     <div class="collapse navbar-collapse show" id="navbarDark">
       <ul class="navbar-nav ms-auto mb-2  mb-xl-0">
