--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,16 @@
-<footer id='footer' class="footer-bottom">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-12">
-        <div class="copyright">
-          <p>© 2022. OutpotYourFeeling</p>
-        </div>
-      </div>
+<footer>
+  <div class="information">
+    <div class="text-jp">
+      <%= link_to "利用規約", href="#", class: "text-jp" %>
     </div>
+    <div class="text-jp">
+      <%= link_to "プライバリシーポリシー", href="#", class: "text-jp" %>
+    </div>
+    <div class="text-jp">
+      <%= link_to "お問い合わせ", href="#", class: "text-jp" %>
+    </div>
+  </div>
+  <div class="copyright text-center">
+    <div class="text">© Copyright 2022. MyEmotion.</div>
   </div>
 </footer>
