Improve: Try画面の改善

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -139,7 +139,7 @@
   }
 }
 
-/* ヘッダーに関するスタイル */
+/* Footerに関するスタイル */
 
 .information {
   padding-top: 30px;
@@ -158,5 +158,22 @@
 .text {
   padding-bottom: 20px;
   font-family: Georgia, serif;
+  color: black;
+}
+
+/* Qestionに関するスタイル */
+
+.title {
+  font-family: Georgia, serif;
+  color: black;
+}
+
+.card {
+  font-family: "YuMincho";
+  color: black;
+}
+
+.answer {
+  font-family: "YuMincho";
   color: black;
 }
