--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <header class="jumbotron my-4">
-    <h1 class="display-3">Try</h1>
+    <h1 class="title text-center">Try</h1>
   </header>
   <div class="row text-center">
     <% @questions.each do |question| %>
