--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -1,9 +1,11 @@
 <div class="row mb-3">
   <div class="col-lg-8 offset-lg-2">
-    <%= form_with model: @answer, url: [@question, @answer], local: true do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-answer-body', row: 4, placeholder: Answer.human_attribute_name(:body) %>
-      <%= f.submit t('defaults.answer'), class: 'btn btn-primary' %>
-    <% end %>
+    <div class="answer text-center">
+      <%= form_with model: @answer, url: [@question, @answer], local: true do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <%= f.text_area :body, class: 'form-control mb-3', id: 'js-new-answer-body', rows: 10 %>
+        <%= f.submit t('defaults.answer'), class: 'btn btn-dark' %>
+      <% end %>
+    </div>
   </div>
 </div>
