--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -11,7 +11,7 @@
       <h2 class="title">About Expressive writing</h2>
       <h6 class="title-jp">筆記開示とは</h6>
         <p class="text">エクスプレッシブライティングとは、1980年代にアメリカの社会心理学者ジェームス・ペネベーカー博士によって生み出された方法です<br>
-                          日本では「筆記開示」とも呼ばれており、思考や感情を書いて言語化するというテクニックのことです</p>
+                        日本では「筆記開示」とも呼ばれており、思考や感情を書いて言語化するというテクニックのことです</p>
     </div>
     <div class="way">
       <h2 class="title">How to Expressive writing</h2>
@@ -39,14 +39,14 @@
       <div class="paragraph">
         <h5 class="subtitle">お試し</h3>
           <p class="text">質問に対して筆記開示していただく機能です<br>
-                            Q1から順番にご回答していただくことを推奨しております<br>
-                            まずはお試しとして、お気軽にご利用ください</p>
+                          Q1から順番にご回答していただくことを推奨しております<br>
+                          保存機能はございませんので、お気軽にご利用ください</p>
         <h5 class="subtitle">筆記開示作成</h3>
           <p class="text">筆記開示をおこなう機能です<br>
-                            文脈や文字数などは気にせず、ご自身の思うままにご記入ください</p>
+                          文脈や文字数などは気にせず、ご自身の思うままにご記入ください</p>
         <h5 class="subtitle">筆記開示一覧</h3>
           <p class="text">作成した筆記開示を一覧として確認することができます<br>
-                            作成者の方のみに表示されますので、安心してご利用ください</p>
+                          作成者の方のみに表示されますので、安心してご利用ください</p>
       </div>
     </div>
   </div>
