Fix: パスを修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,10 +12,10 @@
           <%= link_to "お試し", questions_path, class: 'nav-link' %>
         </li>
         <li class="nav-item nav-link">
-          <%= link_to "筆記開示作成", "#", class: 'nav-link' %>
+          <%= link_to "筆記開示作成", new_article_path, class: 'nav-link' %>
         </li>
         <li class="nav-item nav-link">
-          <%= link_to "筆記開示一覧", "#", class: 'nav-link' %>
+          <%= link_to "筆記開示一覧", articles_path, class: 'nav-link' %>
         </li>
         <li class="nav-item dropdown nav-link">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
