Improve: 文章の校正

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -11,7 +11,7 @@
       <h2 class="title">About Expressive writing</h2>
       <h6 class="title-jp">筆記開示とは</h6>
         <p class="text">エクスプレッシブライティングとは、1980年代にアメリカの社会心理学者ジェームス・ペネベーカー博士によって生み出された方法です<br>
-                        日本では「筆記開示」とも呼ばれており、思考や感情を書いて言語化するというテクニックのことです</p>
+                        日本では「筆記開示」とも呼ばれており、思考や感情を書いて言語化するテクニックのことです</p>
     </div>
     <div class="way">
       <h2 class="title">How to Expressive writing</h2>
