Fix: 登録画面のデザイン修正

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -177,3 +177,13 @@
   font-family: "YuMincho";
   color: black;
 }
+
+.login {
+  font-family: Georgia, serif;
+  color: black;
+}
+
+.signup{
+  font-family: "YuMincho";
+  color: black;
+}
