--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -19,15 +19,15 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="card card-body text-center" style="width: 18rem;">
           <h5 class="card-title">Step 1</h5>
-          <p class="card-text;">紙とペンを用意します</p>
+          <p class="card-text-first">紙とペンを用意します</p>
         </div>
         <div class="card card-body text-center" style="width: 18rem;">
           <h5 class="card-title">Step 2</h5>
-          <p class="card-text">20分間、思考や感情を書き出してください</p>
+          <p class="card-text-second">20分間、思考や感情を書き出してください</p>
         </div>
         <div class="card card-body text-center" style="width: 18rem;">
           <h5 class="card-title">Step 3</h5>
-          <p class="card-text">毎日行います<br>
+          <p class="card-text-third">毎日行います<br>
                                ※少なくとも4日間の継続を推奨されています</p>
         </div>
       </div>
