--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,6 +1,7 @@
 /* ヘッダーに関するスタイル */
 .navbar {
   background-color: white;
+  color: black;
 }
 
 .container {
@@ -83,7 +84,7 @@
   }
 
   .way {
-    padding-top: 50px;
+    padding-top: 50px ;
 
     .card {
       margin-top: 70px;
@@ -99,9 +100,31 @@
       font-weight: bold;
     }
 
-    .card-text {
+    .card-text-first {
       font-family: "YuMincho";
       color: black;
+      position: absolute;
+	    bottom: 30%;
+	    left: 50%;
+	    transform: translateX(-50%);
+    }
+
+    .card-text-second {
+      font-family: "YuMincho";
+      color: black;
+      position: absolute;
+	    bottom: 15%;
+	    left: 50%;
+	    transform: translateX(-50%);
+    }
+
+    .card-text-third {
+      font-family: "YuMincho";
+      color: black;
+      position: absolute;
+	    bottom: 7%;
+	    left: 50%;
+	    transform: translateX(-50%);
     }
   }
 
@@ -110,6 +133,7 @@
     padding-bottom: 100px;
 
     .description {
+      margin-top: 30px;
       font-family: "YuMincho";
       color: black;
     }
@@ -119,6 +143,12 @@
       padding: 1em;
       width: 45%;
       border: 1px solid black; /* 枠線 */
+
+      @media screen and (max-width: 767px) {
+        margin: 2em auto;
+        padding: 1em;
+        width: 95%;
+      }
      }
 
     .subtitle {
