--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_with model: article, local: true do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  <div class="form-group">
-    <%= f.label :title %>
+  <div class="create text-center">
+    <%= f.label t('articles.create.title') %>
     <%= f.text_field :title, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :body %>
+    <%= f.label t('articles.create.body') %>
     <%= f.text_area :body, class: 'form-control', rows: 10 %>
   </div>
-
-  <%= f.submit class: 'btn btn-primary' %>
+  <div class="submit text-center">
+    <%= f.submit t('defaults.create'), class: 'btn btn-dark' %>
+  </div>
 <% end %>
