--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,88 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-8 offset-lg-2">
-      <%= render 'form', { article: @article } %>
+<body>
+  <header>
+    <script>
+
+      var timer1; //タイマーを格納する変数（タイマーID）の宣言
+
+      //カウントダウン関数を1000ミリ秒毎に呼び出す関数
+      function cntStart()
+      {
+        document.timer.elements[2].disabled=true;
+        timer1=setInterval("countDown()",1000);
+      }
+
+      //タイマー停止関数
+      function cntStop()
+      {
+        document.timer.elements[2].disabled=false;
+        clearInterval(timer1);
+      }
+
+      //カウントダウン関数
+      function countDown()
+      {
+        var min=document.timer.elements[0].value;
+        var sec=document.timer.elements[1].value;
+
+        if( (min=="") && (sec=="") )
+        {
+          alert("時刻を設定してください！");
+          reSet();
+        }
+        else
+        {
+          if (min=="") min=0;
+          min=parseInt(min);
+    
+          if (sec=="") sec=0;
+          sec=parseInt(sec);
+    
+          tmWrite(min*60+sec-1);
+        }
+      }
+
+      //残り時間を書き出す関数
+      function tmWrite(int)
+      {
+        int=parseInt(int);
+  
+        if (int<=0)
+        {
+          reSet();
+          alert("時間です！");
+        }
+        else
+        {
+          //残り分数はintを60で割って切り捨てる
+          document.timer.elements[0].value=Math.floor(int/60);
+          //残り秒数はintを60で割った余り
+          document.timer.elements[1].value=int % 60;
+        }
+      }
+
+      //フォームを初期状態に戻す（リセット）関数
+      function reSet()
+      {
+        document.timer.elements[0].value="0";
+        document.timer.elements[1].value="0";
+        document.timer.elements[2].disabled=false;
+        clearInterval(timer1);
+      }  
+    </script>
+  </header>
+  <div class="container">
+    <div class="timer">
+      <form name="timer">
+        <input type="text" value="">分
+        <input type="text" value="">秒<p>&nbsp;</p>
+        <input type="button" value="スタート" onclick="cntStart()">
+        <input type="button" value="ストップ" onclick="cntStop()">
+      </form>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2">
+        <%= render 'form', { article: @article } %>
+      </div>
     </div>
   </div>
-</div>
+</body>
