Improve: 一覧機能の日本語化

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -6,8 +6,8 @@
           <%= link_to article.title, article_path(article) %>
         </h4>
         <% if article.user_id == current_user.id %>
-          <td><%= link_to 'Edit', edit_article_path(article) %></td>
-          <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to (t 'articles.index.edit'), edit_article_path(article) %></td>
+          <td><%= link_to (t 'articles.index.delete'), article, method: :delete, data: { confirm: '削除しますか?' } %></td>
         <% end %>
         <p class="card-text"><%= article.body %></p>
       </div>
