Add: ページネーション

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,6 +8,7 @@
           <p><%= t('.no_result') %></p>
         <% end %>
       </div>
+      <%= paginate @articles %>
     </div>
   </div>
 </div>
