--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -14,6 +14,9 @@
         <li class="nav-item nav-link">
           <%= link_to (t 'defaults.register'), new_user_path ,class: 'nav-link' %>
         </li>
+        <li class="nav-item nav-link">
+          <%= link_to (t 'defaults.twitter'), auth_at_provider_path(provider: :twitter) ,class: 'nav-link' %>
+        </li>
       </ul>
     </div>
   </div>
