Add: 利用規約ページを作成

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="information">
     <div class="text-jp">
-      <%= link_to "利用規約", href="#", class: "text-jp" %>
+      <%= link_to "利用規約", terms_path, class: "text-jp" %>
     </div>
     <div class="text-jp">
       <%= link_to "プライバリシーポリシー", href="#", class: "text-jp" %>
