Add: プライバシーポリシーを追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <%= link_to "利用規約", terms_path, class: "text-jp" %>
     </div>
     <div class="text-jp">
-      <%= link_to "プライバリシーポリシー", href="#", class: "text-jp" %>
+      <%= link_to "プライバリシーポリシー", privacy_path, class: "text-jp" %>
     </div>
     <div class="text-jp">
       <%= link_to "お問い合わせ", href="#", class: "text-jp" %>
