--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,7 +21,7 @@
             <%= f.label :password_confirmation %>
             <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
-          <div class="text-center">
+          <div class="actions text-center">
             <%= f.submit (t 'defaults.register'), class: 'btn btn-dark' %>
           </div>
         <% end %>
