Add: お問合せフォーム作成

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
       <%= link_to "プライバリシーポリシー", privacy_path, class: "text-jp" %>
     </div>
     <div class="text-jp">
-      <%= link_to "お問い合わせ", href="#", class: "text-jp" %>
+      <%= link_to "お問い合わせ", new_contacts_path, class: "text-jp" %>
     </div>
   </div>
   <div class="copyright text-center">
