Update: 制定日更新

--- a/app/views/static_pages/terms.html.erb
+++ b/app/views/static_pages/terms.html.erb
@@ -142,7 +142,7 @@
           <li>本サービスに関して紛争が生じた場合には、当社の本店所在地を管轄する裁判所を専属的合意管轄とします。</li>
         </ol>
       </div>
-      【2022年月日制定】
+      【2022年7月7日制定】
     </div>
   </div>
 </main>
