--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,7 +23,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li class="dropdown-item">
-              <%= link_to "プロフィール", "#", class: 'dropdown-item' %>
+              <%= link_to "プロフィール", profiles_path, class: 'dropdown-item' %>
             </li>
             <li class="dropdown-item">
               <%= link_to (t 'defaults.logout'), logout_path, class: 'dropdown-item', method: :delete %>
