--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,8 @@
-<h1><%= t('.title') %></h1>
-<p>名前：<%= current_user.name %></p>
-<p>メールアドレス：<%= current_user.email %></p>
+<div class="container">
+  <h2 class="text-center"><%= t('.title') %></h2>
+  <div class="profiles">
+    <p>お名前：<%= current_user.name %></p>
+    <p>メールアドレス：<%= current_user.email %></p>
+    <%= link_to (t 'profiles.show.edit'), edit_profiles_path,class: "Editlink" %>
+  </div>
+</div>
