Improve: リンクカラーを改善

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -178,6 +178,11 @@
   color: black;
 }
 
+.link-color {
+  text-decoration: none;
+  color: rgb(142, 107, 129);
+}
+
 /* Articleに関するスタイル */
 
 .create {
@@ -275,3 +280,4 @@
   width: 65%;
   border: 1px solid black; /* 枠線 */
 }
+
