Add: 新規登録ページにログインページのリンクを追加

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,6 +25,9 @@
             <%= f.submit (t 'defaults.register'), class: 'btn btn-dark' %>
           </div>
         <% end %>
+        <div class='text-center'>
+          <%= link_to (t 'defaults.login'), login_path, class:'edit-link' %>
+        </div>
       </div>
     </div>
   </div>
